--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/*-------Kinga Jaszweska---------*/
+/*-------Kinga Jaszewska---------*/
 .amsterdamzdj img {
     width: 400px;
     height: 250px;
@@ -11,4 +11,37 @@
 .barcelonazdj img {
     width: 400px;
     height: 250px;
+}
+
+.monacozdj img {
+    width: 400px;
+    height: 250px;
+
+}
+.rzymzdj img {
+    width: 400px;
+    height: 250px;
+
+}
+.lazdj img {
+    width: 400px;
+    height: 250px;
+
+}
+/*-----Body---*/
+body {
+    margin: 0px;
+    color: black;
+    background-color: bisque;
+}
+.nav {
+    box-shadow: 0px 0px 5px;
+}
+.nav h1 {
+    display: flex;
+    justify-content: center;
+}
+.nav p {
+    display: flex;
+    justify-content: center;
 }
